# lidarhdpip

./: .dockerignore  .gitignore  Dockerfile-bacalau  Dockerfile-pdal  Dockerfile.kafka  LICENSE.md  Presentation.md  README.md  docker-compose.yml  howtotile3d.md  pyproject.toml  requirements.txt  run.sh  todo.md
.aws/: credentials.example
.github/workflow/: test-docker-build.yml
.github/workflows/: codepipeline-deploy.yml  pushing_lambda.yml  test-docker-build.yml
3DTilesRendererJS/: .babel.config.json.swp  .package.json.swp  note.md
3DTilesRendererJS/docker/: .Dockerfile.swn  .Dockerfile.swo  .Dockerfile.swp  .README.md.swo  Dockerfile  Dockerfile_first  README.md
3DTilesRendererJS/example/: .FlyOrbitControls.js.swp  index.js  pntsExample.html  pntsExample.js
3DTilesRendererJS/example/bundle/: b3dmExample.d88db709.js  b3dmExample.d88db709.js.map  cmptExample.4b2a3f0d.js  cmptExample.4b2a3f0d.js.map  customMaterial.dd39ecee.js  example.e31bb0bc.js  (+22 more)
app/: Dockerfile  Dockerfile.bots  README.md
aws_deployment/: .env.example  Dockerfile  README.md  app.py  architecture.py  cdk.json  ci_cd.sh  pyproject.toml  requirements.txt
aws_deployment/infrastructure/: __init__.py  ci_pipeline.py  infrastructure_stack.py
aws_deployment/tests/unit/: test_infrastructure_stack.py
bacalau/: Dockerfile  Dockerfile.bacalau  bacalau_script.py  bacalau_test.py  model.py  pyproject.toml  requirements.txt  setup.py  start_server.sh  test.sh
bacalau/broker/: __init__.py  bacalhauConsumer.py  bacalhauProducer.py
bacalau/test/: __init__.py  bacalau_test.py
bacalau/test/mock/: bot.py
bots/: Dockerfile  Dockerfile.discord  __init__.py  pyproject.toml  requirements.txt  setup.py
bots/Discord/: Commands.py  __init__.py  circombot.py  config.json  job_types.py  loggingFormatter.py
bots/Discord/cogs/: Commands.py  __init__.py
bots/Discord/storage/: __init__.py  database.db  schema.sql
bots/consumer/: __init__.py  kafkaConsumer.py
bots/producer/: __init__.py  kafkaProducer.py
bots/test/: test_Discord.py
bots/twitter/: tweet_archive.py  twitter_bot.py  twitter_consumer.py
bots/utils/: model_helper.py  pipeline_construction_caller.py
georender/: .env  Dockerfile-pdal  Dockerfile.pdal  README.md  app.py  georender.py  main.py  pipeline_gen.json  pipeline_template.json  readme.md  requirements.txt  run.sh  run_complete.sh  test.sh  test_georender.py  test_main.py  todo.md  web3StoragePackage.py
georender/datas/: TA_diff_pkk_lidarhd.shx
georender/src/: main.py  toto.py
georender/test/: test_georender.py  test_main.py
job_scheduler/: Dockerfile  README.md  __init__.py  conftest.py  main.py  pyproject.toml  requirements.txt  setup.py
job_scheduler/route/: __init__.py  bacalau_script.py
job_scheduler/tests/: job_scheduler_test.py  test_job_scheduler.py
job_scheduler/utils/: types.py
kafka/: Dockerfile.kafka  client.properties  model.py  pyproject.toml  requirements.txt  zookeeper.properties
kafka/consumer/: twitter_bot_consumer.py  twitter_consumer.py  web3-storage-consumer.py
kafka/producers/: bacalau_producer.py  producer_template.py  twitter_producer.py  web3-storage-producer.py
py3dtiles/: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_RELEASE.md  LICENSE  README.rst  mypy.ini  setup.cfg  setup.py  sonar-project.properties
py3dtiles/docker/: .Dockerfile.swp  .README.md.swp  .requirements.txt.swp  Dockerfile  README.md  requirements.txt
py3dtiles/docs/: README.md  api.rst  conf.py  install.rst
py3dtiles/py3dtiles/: command_line.py  convert.py  exceptions.py  export.py  info.py  merger.py  typing.py  utils.py
py3dtiles/tests/: test_b3dm.py  test_batch_table.py  test_batch_table_hierachy_extension.py  test_bounding_volume_box.py  test_code_examples.py  test_convert.py  test_extension.py  test_merger.py  test_pnts.py  test_points.py  test_reader.py  test_shared_node_store.py  test_tile.py  test_tileset.py  test_wkb_utils.py
src/: app.py  bacalau.py  kafka_config.py  main.py  model.py  tweepy.py  web3Storage.py
src/consumer/: twitter_consumer.py
src/producers/: twitter_producer.py  web3-storage-producer.py
streamlit_app/: app.py  pyproject.toml  requirements.txt
streamlit_app/pages/: rendering_page.py
surface_reconstruction/src/: compute_normals.cpp
twitter-bot/: tweepy.py
twitter_bot/: readme.md  tweepy.py
twitterbot/: __init__.py  model.py  pyproject.toml  readme.md  requirements.txt  routes.py  tweepy.py
visualization/: .env.example  Dockerfile  Dockerfile.renderer  README.md  app.py  pyproject.toml  requirements.txt
visualization/test/: test_app.py
visualization/visualizer_component/: README.md  Setup.py  __init__.py
visualization/visualizer_component/frontend /: package-lock.json  package.json  tsconfig.json
visualization/visualizer_component/frontend /public/: index.html
visualization/visualizer_component/frontend /src/: Visualizer3D.tsx  index.tsx
visualization/visualizer_component/frontend /src/utils/: Statusbar.tsx
web3storage/: pyproject.toml  test_package.py  w3storage.py  web3Storage.py
(+63 files in other folders)
