[tool.poetry] 
name="bots"
version="0.1.0"
description = "package to host the bot application along with messaging stream"
readme="README.md"
authors=["Dhruv Malik"]
include = [
{ path = "consumer" }, {path = "Discord"}, {path = "producer"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7"
py3dtiles = ">=5.0.0"
discord = "^2.3.1"
streamlit = "^1.25.0"
kafka-python = "^2.0.2"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
pytest = "^7.4.0"
fastapi = "^0.101.1"
dpytest = "^0.7.0"



[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."src.bots.Discord.circombot"]
export = "src.plugings:Circombot"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

