[tool.poetry]
name = "visualization"
version = "0.1.0"
description = "A package for visualizing the generated 3D construction mesh"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
py3dtiles = "6.0.0"
streamlit = "^1.26.0"
kafka = "^1.3.5"
w3storage = "^0.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
