[tool.poetry]
name = "visualization"
version = "0.1.0"
description = "A streamlit app for visualizing the generated 3D construction mesh"
authors = ["Dhruv Malik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
py3dtiles = "6.0.0"
streamlit = "^1.26.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
